<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:layout_marginHorizontal="10dp">

            <TextView
                android:id="@+id/textViewEcopontoListItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textViewEcopontoListItemDescription"
                android:text="@string/ecoponto_name_default_text"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textViewEcopontoListItemDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textViewEcopontoListItemLocation"
                android:ellipsize="end"
                android:maxLines="4"
                android:text="@string/ecoponto_description_default_text"
                />

            <TextView
                android:id="@+id/textViewEcopontoListItemLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imageViewEcopontoItemFavoriteStar"
                android:textSize="11sp"
                android:maxLines="2"
                android:text="@string/ecoponto_location_default_text"
                />

            <ImageView
                android:id="@+id/imageViewEcopontoItemFavoriteStar"
                android:contentDescription="@string/star_icon_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textViewEcopontoListItemLocation"
                app:layout_constraintBottom_toBottomOf="@id/textViewEcopontoListItemLocation"
                app:tint="@color/OliveDrab" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>